--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "async-retry": "1.3.3",
     "dotenv": "17.2.3",
     "dotenv-expand": "12.0.3",
+    "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "node-pg-migrate": "7.9.1",
     "pg": "8.16.3",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "20.1.0",
